# photo-mint

./: README.md  components.json  index.html  package-lock.json  package.json  vite-plugin.js  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  Context.ts  Editor.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/app/: params-panel.tsx  tasks-panel.tsx  upload-area.tsx
src/components/ui/: radio-group.tsx
